--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit
-diffusers
-torch
-transformers
-accelerate
-pillow  # Do pracy z obrazami
-huggingface_hub
+torch==2.4.1
+transformers==4.45.2
+diffusers==0.30.3
+sentencepiece==0.1.98
+streamlit==1.39.0
+pillow==10.4.0
+numpy==2.1.2
+pandas==2.2.3
+requests==2.32.3
