--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.31.0
-torch==2.4.0
-transformers==4.36.2
-diffusers==0.25.0
-pillow==10.2.0
+streamlit
+diffusers
+transformers
+torch
+accelerate
+safetensors
