--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-diffusers
-transformers
-torch
-accelerate
-safetensors
+streamlit==1.31.0
+torch==2.2.0
+diffusers==0.25.0
+transformers==4.37.0
+accelerate==0.27.0
+pillow==10.2.0
