--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.31.0
-torch==2.2.0
-diffusers==0.25.0
-transformers==4.37.0
-accelerate==0.27.0
-pillow==10.2.0
-huggingface-hub==0.20.3
-safetensors==0.4.2
+streamlit>=1.32.0
+torch>=2.2.0
+diffusers>=0.25.0
+transformers>=4.37.0
+pillow>=10.2.0
+accelerate>=0.27.0
